fiddled around and found that making the CSS grid row containing my project images a size of auto would prevent overlap

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -35,7 +35,7 @@ div {
 
 .wrapper {
 	display: grid;
-    grid-template-rows: 100vh 100vh 100vh 100vh;
+    grid-template-rows: 100vh 100vh auto 100vh;
     position: absolute;
     top: 6rem;
 }
